--- a/index.HTML
+++ b/index.HTML
@@ -2,7 +2,7 @@
 <html> <head> <title> GAME</title>
   <script type="text/javascript" src="audio.js"></script>
 <link rel="stylesheet" type="text/css" href="stylecss.css">
-<script src="js02.js">
+<script src="jsser.js">
  
 </script>
 </head>
@@ -22,7 +22,7 @@
      <button type="button" id="b2"onclick="down('top')">up</button>
      <button type="button" id="b3" onclick="down('bttom')">down</button>
 	 <button type="button" id="b4"onclick="down('right')">right</button>
-     <button type="button" id="b5"onclick="down('left')">left</button>
+     <button type="button" id="b5">left</button>
      <button type="button" id="b6"onclick="stop()">stop</button>
      
   </from>
